fixed menu and Tune page spacing when the HTML is minified

--- a/src/css/2-pages/content-tune.css
+++ b/src/css/2-pages/content-tune.css
@@ -17,12 +17,12 @@
 	margin: 16px 0 0 0;
 	padding: 0;
 }
-.content-tune .tune-links li {display: inline-block;}
+.content-tune .tune-links li {display: inline-flex;}
 .content-tune .tune-links a {
 	border-bottom: 1px solid;
 	border-bottom-left-radius: 10px;
 	cursor: pointer;
-	padding: 5px 10px;
+	padding: 2px 10px;
 	text-decoration: none;
 }
 .content-tune .tune-links .fas, .content-tune .tune-links .fab {
