--- a/src/css/3-screens/3-s.css
+++ b/src/css/3-screens/3-s.css
@@ -118,5 +118,5 @@
 		padding-top: 10px;
 	}
 
-	.content-tune .tune-links li {margin: 10px 4px;}
+	.content-tune .tune-links li {margin: 7px 6px;}
 }
